--- a/common/src/main/resources/assets/sereneseasons/lang/tr_tr.json
+++ b/common/src/main/resources/assets/sereneseasons/lang/tr_tr.json
@@ -34,7 +34,7 @@
   "desc.sereneseasons.mid_winter": "Kış Ortaları",
   "desc.sereneseasons.late_winter": "Kış Sonları",
   
-  "desc.sereneseasons.early_wet": "Early Nem",
+  "desc.sereneseasons.early_wet": "Erken Nem",
   "desc.sereneseasons.mid_wet": "Orta Nem",
   "desc.sereneseasons.late_wet": "Geç Nem",
   "desc.sereneseasons.early_dry": "Erken Kuru Nem",
