--- a/common/src/main/resources/assets/sereneseasons/lang/zh_tw.json
+++ b/common/src/main/resources/assets/sereneseasons/lang/zh_tw.json
@@ -1,21 +1,43 @@
 {
   "commands.sereneseasons.usage": "/season <get/set> [args]",
-  "commands.sereneseasons.getseason.success": "現在是%s的第 %s/%s 天、%s/%s 刻",
-  "commands.sereneseasons.setseason.success": "將季節設為%s",
-  "commands.sereneseasons.setseason.fail": "季節%s無效",
+  "commands.sereneseasons.getseason.success": "現在是 %s 的第 %s/%s 天、%s/%s 刻",
+  "commands.sereneseasons.setseason.success": "將季節設為 %s",
+  "commands.sereneseasons.setseason.fail": "季節 %s 無效",
   "commands.sereneseasons.setseason.disabled": "目前已停用季節！",
 
+  "gamerule.doSeasonCycle": "推進季節循環",
   "itemGroup.tabSereneSeasons": "Serene Seasons",
 
   "block.sereneseasons.season_sensor": "季節感測器",
-  
+
   "item.sereneseasons.ss_icon": "SS Icon",
   "item.sereneseasons.calendar": "日曆",
 
   "desc.sereneseasons.fertile_seasons": "生長季",
   "desc.sereneseasons.year_round": "全年",
+  "desc.sereneseasons.day_counter": "第 %s/%s 天",
+  "desc.sereneseasons.tropical_day_counter": " (%s/%s)",
   "desc.sereneseasons.spring": "春季",
+  "desc.sereneseasons.early_spring": "初春",
+  "desc.sereneseasons.mid_spring": "仲春",
+  "desc.sereneseasons.late_spring": "晚春",
   "desc.sereneseasons.summer": "夏季",
+  "desc.sereneseasons.early_summer": "初夏",
+  "desc.sereneseasons.mid_summer": "仲夏",
+  "desc.sereneseasons.late_summer": "晚夏",
   "desc.sereneseasons.autumn": "秋季",
-  "desc.sereneseasons.winter": "冬季"
+  "desc.sereneseasons.early_autumn": "初秋",
+  "desc.sereneseasons.mid_autumn": "仲秋",
+  "desc.sereneseasons.late_autumn": "晚秋",
+  "desc.sereneseasons.winter": "冬季",
+  "desc.sereneseasons.early_winter": "初冬",
+  "desc.sereneseasons.mid_winter": "仲冬",
+  "desc.sereneseasons.late_winter": "晚冬",
+
+  "desc.sereneseasons.early_wet": "初雨季",
+  "desc.sereneseasons.mid_wet": "仲雨季",
+  "desc.sereneseasons.late_wet": "晚雨季",
+  "desc.sereneseasons.early_dry": "初旱季",
+  "desc.sereneseasons.mid_dry": "仲旱季",
+  "desc.sereneseasons.late_dry": "晚旱季"
 }
